refactor: migrate course to program domain
