# docs/integrations/integrations_swagger.json
@@ -187,8 +187,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Filter by course ID",
-                        "name": "course_id",
+                        "description": "Filter by program ID",
+                        "name": "program_id",
                         "in": "query"
                     },
                     {
@@ -205,7 +205,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Order by field (first_name, last_name, student_number, created_at, updated_at, year_level, course_id)",
+                        "description": "Order by field",
                         "name": "order_by",
                         "in": "query"
                     },
@@ -484,7 +484,7 @@
                     "$ref": "#/definitions/locations.Region"
                 },
                 "streetDetail": {
-                    "type": "string"
+                    "$ref": "#/definitions/structs.NullableString"
                 },
                 "studentNumber": {
                     "type": "string"
@@ -494,9 +494,6 @@
         "integrations.OGOSStudentDTO": {
             "type": "object",
             "properties": {
-                "course": {
-                    "$ref": "#/definitions/students.Course"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -511,6 +508,9 @@
                 },
                 "mobileNumber": {
                     "type": "string"
+                },
+                "program": {
+                    "$ref": "#/definitions/students.Program"
                 },
                 "section": {
                     "type": "string"
@@ -535,7 +535,7 @@
                 "gender": {
                     "$ref": "#/definitions/students.Gender"
                 },
-                "heightFt": {
+                "heightM": {
                     "type": "number"
                 },
                 "placeOfBirth": {
@@ -777,12 +777,9 @@
                 }
             }
         },
-        "students.Course": {
+        "students.Gender": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -791,9 +788,12 @@
                 }
             }
         },
-        "students.Gender": {
+        "students.Program": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
